--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,18 @@ button {
   padding: 10px 20px;
   font-size: 16px;
 }
+
+.Calculator {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.Calculator input {
+  margin: 5px;
+}
+
+.Calculator button {
+  margin: 5px;
+}
